Fix security issues.

--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "@angular/router": "~9.1.4",
     "@angular/service-worker": "~9.1.4",
     "@clr/angular": "^3.1.1",
+    "@clr/core": "^3.0.0",
     "@clr/icons": "^3.1.1",
     "@clr/ui": "^3.1.1",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
     "core-js": "^2.6.10",
-    "http-server": "^0.12.1",
+    "http-server": "^0.12.3",
     "rxjs": "~6.5.5",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.3",
-    "@clr/core": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.4",
@@ -38,8 +38,8 @@
     "@angular/language-service": "~9.1.4",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
+    "@types/node": "^12.12.37",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -47,7 +47,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.7.5"
